# LSystemEditor

./: CMakeLists.txt  plan.txt
Application/: CMakeLists.txt
Application/src/: AppLog.h  AppSettings.cpp  AppSettings.h  main.cpp
Application/src/Controller/: SceneController.cpp  SceneController.h
Application/src/MeshBuilder/: HostMesh.h  ManifoldMeshConvert.cpp  ManifoldMeshConvert.h  MeshSmoothNormals.cpp  MeshSmoothNormals.h
Application/src/Model/: SceneModel.cpp  SceneModel.h
Application/src/Procedural/: Loft.cpp  Loft.h  ProceduralMeshBuilder.cpp  ProceduralMeshBuilder.h  ProceduralSceneMeshBuilder.cpp  ProceduralSceneMeshBuilder.h  ProceduralTypes.h  Spline.cpp  Spline.h  Turtle.cpp  Turtle.h
Application/src/View/: Camera3D.cpp  CameraDynamicsController.h  FocusGizmoOverlay.cpp  FocusGizmoOverlay.h  LSystemTransformDialog.h  MainView.cpp  MainView.h  MeshAccelBoundsOverlay.cpp  MeshAccelBoundsOverlay.h  OpenGLViewportWidget.cpp  OpenGLViewportWidget.h  OriginGizmoOverlay.cpp  OriginGizmoOverlay.h  OverlayLineClip.h  QuadViewCamera2D.h  RegionRenderOverlay.cpp  RegionRenderOverlay.h  SettingsDialog.cpp  SettingsDialog.h  UiFonts.cpp  UiFonts.h  ViewportInputState.h  ZoomablePlainTextEdit.cpp  ZoomablePlainTextEdit.h
Application/tests/: ProceduralMeshTests.cpp
LSystemLib/: CMakeLists.txt
LSystemLib/include/: LSystem.h  LSystemMaterials.h
LSystemLib/src/: LSystemController.cpp  LSystemEvaluator.cpp
LSystemLib/src/details/: LSystemConstantsParse.cpp  LSystemImpl.cpp  LSystemLineParse.cpp  LSystemLineParse.h  LSystemMaterialParse.cpp  LSystemMaterialParse.h  ModuleStringParser.cpp
LSystemLib/tests/: CMakeLists.txt  LSystemConstantsParse_test.cpp  LSystemController_test.cpp  LSystemEvaluator_test.cpp  LSystemMaterialParse_test.cpp  LSystem_public_test.cpp  ModuleStringParser_detail_test.cpp
PathTracerLib/: CMakeLists.txt
PathTracerLib/src/: EnvironmentMap.cpp  EnvironmentMap.h  PathIntegratorCore.h  PathIntegratorRandCore.h  PathTracer.cpp  PathTracer.cu  PathTracer.h  PathTracerAdaptiveSampling.h  PathTracerCuda.h  PathTracerPreviewLevels.h  PathTracerRegionRender.h  PathTracerSampleBudget.h  PhysicalCamera.cpp  PhysicalCamera.h  RenderTypes.h  SceneUnits.h
PathTracerLib/src/Brdf/: BrdfBase.h  BrdfDebug.h  BrdfDispatch.h  BrdfLobe.h  DiffuseBrdf.h  GlassBrdf.h  MetalBrdf.h  OrenNayarDiffuseBrdf.h  PrincipledBrdf.h  SubsurfaceCore.h
PathTracerLib/src/Bssrdf/: BssrdfCore.h
PathTracerLib/src/Geometry/: GeometryTypes.h
PathTracerLib/src/Material/: MaterialChannels.h  MaterialParams.h  MaterialResolver.h  MaterialType.h
PathTracerLib/src/Medium/: MediumProperties.h  VolumeCore.h  VolumeScatteringCore.h
PathTracerLib/src/MeshAccel/: MaterialType.h  Mesh.h  MeshAccelBoundsMesh.h  MeshAccelGltfIO.h  MeshAccelGltfImport.cpp  MeshAccelIntersectCore.h  MeshAccelMaterialJson.cpp  MeshAccelMaterialJson.h  MeshAccelScene.cpp  MeshAccelScene.h  MeshAccelTypes.h  MeshAccelWavefrontExport.cpp  MeshSceneContent.cpp  MeshSceneContent.h
PathTracerLib/src/Path/: PathState.h
PathTracerLib/src/Sampling/: LightSamplingCore.h  MisCore.h  RandCore.h
PathTracerLib/src/Spectral/: Rgb2Spec.h  SpectralCore.h  SpectralDevice.cuh  SpectralState.cpp  SpectralState.h
PathTracerLib/src/Subsurface/: SubsurfaceTransportCore.h
PathTracerLib/src/Texture/: MaterialChannels.h  ProceduralTexture.h  TexturePack.h
PathTracerLib/src_old/: CameraDevice.cuh  CameraGpu.h  EnvironmentMap.h  PathIntegratorCore.h  PathTracer.cpp  PathTracerCuda.h  PathTracerPreviewLevels.h  PathTracerRegionRender.h  PhysicalCamera.h  SceneUnits.h
PathTracerLib/src_old/Brdf/: BrdfBase.h  BrdfDispatch.h  PrincipledBrdf.h
PathTracerLib/src_old/Bssrdf/: BssrdfCore.h
PathTracerLib/src_old/Medium/: MediumProperties.h
PathTracerLib/src_old/MeshAccel/: MaterialType.h  MeshAccelGltfExport.cpp  MeshAccelScene.cuh  MeshAccelScene.h  MeshAccelSceneGltfExport.cpp  MeshAccelTextureBake.cpp  MeshAccelTextureBake.h  MeshAccelWavefrontExport.cpp  MeshBvhBuilder.h
PathTracerLib/src_old/Sampling/: LightSamplingCore.h
PathTracerLib/src_old/Texture/: MaterialChannels.h  ProceduralTexture.h  TexturePack.h
PathTracerLib/tests/: CameraSamplingTests.cpp  MeshAccelTests.cpp  NloptSobolReference.h  PathTracerAdaptiveSamplingTests.cpp  PathTracerBudgetTests.cpp  PathTracerCameraDirectionTests.cpp  PathTracerExposureTests.cpp  PathTracerGlassBrdfTests.cpp  PathTracerGltfInterchangeTests.cpp  PathTracerLightSamplingTests.cpp  PathTracerMeshUvTests.cpp  PathTracerOrenNayarBrdfTests.cpp  PathTracerPreviewLevelsTests.cpp  PathTracerPrincipledBrdfTests.cpp  PathTracerProceduralTextureTests.cpp  PathTracerRegionRenderTests.cpp  PathTracerSceneUnitsTests.cpp  PathTracerShadowEpsilonTests.cpp  PathTracerSpectralTests.cpp
src/: Camera2D.cpp  Camera2D.h  CudaGlInterop.cpp  DebounceTimer.cpp  DebounceTimer.h  MainView.cpp  MainView.h  OpenGLViewportWidget.cpp  SceneModel.h  main.cpp
src/Application/: AppLog.cpp  AppSettings.cpp  AppSettings.h
src/Controller/: SceneController.cpp  SceneController.h
src/LSystemLib/: CMakeLists.txt
src/LSystemLib/include/: LSystemController.h  LSystemEvaluator.h  LSystemMaterials.h  LSystemModel.h
src/LSystemLib/src/: LSystem.cpp  LSystemEvaluator.cpp
src/LSystemLib/src/details/: LSystemConstantsParse.cpp  LSystemConstantsParse.h  LSystemImpl.cpp  LSystemImpl.h  ModuleStringParser.h  ModuleStringParserInternal.h
src/LSystemLib/tests/: CMakeLists.txt  LSystemEvaluator_test.cpp
src/Model/: SceneDefaults.cpp  SceneDefaults.h  SceneModel.cpp  SceneModel.h  ScenePrimitive.cpp  ScenePrimitive.h
src/Renderer/: CameraDevice.cuh  CameraGpu.h  CudaGlInterop.cu  CudaGlInterop.h  EnvironmentMap.cpp  EnvironmentMap.h  PathIntegratorCore.h  PathTracer.cpp  PathTracer.cu  PathTracer.h  PathTracerCuda.h  RenderAccumulationState.h  RenderVisualCore.h  ShadingCore.h
tests/: BsdfCoreTests.cpp  MeshAccelTests.cpp  PathIntegratorTests.cpp  PathTracerBudgetTests.cpp  ProceduralMeshTests.cpp  QmcSamplerTests.cpp  SdfAccelTestHelpers.h  SdfAccelTests.cpp  SdfRayMarcherTests.cpp  SdfTestHelpers.h
(+92 files in other folders)
